# PYSC_2024-2025

./: README.md
Ejemplos PDDL/: hanoi_domain.pddl  hanoi_problem.pddl  hanoi_problem_fluents.pddl  rover_domain.pddl  rover_problem.pddl
Ejemplos PDDL/briefcase/: briefcase_problem_0.pddl
Ejemplos PDDL/hanoi/: hanoi_domain.pddl  hanoi_problem.pddl
Ejemplos PDDL/hanoi_fluents/: hanoi_domain_fluents.pddl  hanoi_problem_fluents.pddl
Ejemplos PDDL/rover/: rover_problem.pddl
Ejemplos PDDL/travel/: travel_domain.pddl
Ejemplos UPF/: ejemplo1_upf.py  ejemplo2_upf.py
Exámenes/Examen Convocatoria Ordinaria Bloque 1 PDDL/src/: domain.pddl  problem.pddl
Exámenes/Examen Parcial Bloque 1 PDDL/src/: domain.pddl  popf_output.txt  problem.pddl
Prácticas/Práctica 1: Exploración Espacial/: README.md
Prácticas/Práctica 1: Exploración Espacial/Ejercicio 1/: exploration_domain.pddl  exploration_problem.pddl
Prácticas/Práctica 1: Exploración Espacial/Ejercicio 2/: exploration_domain_drill.pddl  exploration_problem_drill.pddl
Prácticas/Práctica 1: Exploración Espacial/Ejercicio de Calentamiento 2/: exploration_domain_example.pddl  exploration_problem_example.pddl
Prácticas/Práctica 1: Exploración Espacial/Ejercicio de Calentamiento 3/: exploration_problem_example.pddl
Prácticas/Práctica 2: Limoneros/: README.md
Prácticas/Práctica 2: Limoneros/Ejercicio 1/: deposit_24_domain.pddl  deposit_24_problem.pddl  deposit_fluent_domain.pddl  deposit_problem.pddl  lemon_fluent_domain.pddl  lemon_problem.pddl
Prácticas/Práctica 2: Limoneros/Ejercicio 2/: lemon_durative_domain.pddl  lemon_problem.pddl
Prácticas/Práctica 2: Limoneros/Ejercicio Extra (Opcional)/: lemon_domain_extra.pddl  lemon_problem_extra.pddl
Prácticas/Práctica 3: Trabajo Final PDDL/: README.md
Prácticas/Práctica 3: Trabajo Final PDDL/Ejemplo Completo/: exploration_domain_drill.pddl  exploration_problem_drill.pddl
Prácticas/Práctica 3: Trabajo Final PDDL/Ejemplos/conditional-effects/: domain.pddl  problem.pddl
Prácticas/Práctica 3: Trabajo Final PDDL/Ejemplos/continuous-effects/: domain.pddl  problem.pddl
Prácticas/Práctica 3: Trabajo Final PDDL/Ejemplos/disjunctive-preconditions/: domain.pddl  problem.pddl
Prácticas/Práctica 3: Trabajo Final PDDL/Ejemplos/durative-actions/: domain.pddl  problem.pddl
Prácticas/Práctica 3: Trabajo Final PDDL/Ejemplos/existential-preconditions/: domain.pddl  problem.pddl
Prácticas/Práctica 3: Trabajo Final PDDL/Ejemplos/negative-preconditions/: domain.pddl  problem.pddl
Prácticas/Práctica 3: Trabajo Final PDDL/Ejemplos/numeric-fluents/: domain.pddl  problem.pddl
Prácticas/Práctica 3: Trabajo Final PDDL/Ejemplos/universal-preconditions/: domain.pddl  problem.pddl
Prácticas/Práctica 4: Introducción a PlanSys2/: .gitignore  CMakeLists.txt  README.md  package.xml
Prácticas/Práctica 4: Introducción a PlanSys2/launch/: commands  exploration_example_launch.py
Prácticas/Práctica 4: Introducción a PlanSys2/pddl/: exploration_domain_example.pddl  exploration_problem_example.pddl
Prácticas/Práctica 4: Introducción a PlanSys2/src/: analyse_soil_action_node.cpp  collect_action_node.cpp  drop_action_node.cpp  move_action_node.cpp
Prácticas/Práctica 5: Drone de Búsqueda/: .gitignore  CMakeLists.txt  README.md  package.xml
Prácticas/Práctica 5: Drone de Búsqueda/launch/: commands.txt  drone_search_launch.py
Prácticas/Práctica 5: Drone de Búsqueda/pddl/: domain.pddl  problem.pddl
Prácticas/Práctica 5: Drone de Búsqueda/src/: drone_search_controller_node.cpp  fly_action_node.cpp  search_action_node.cpp
Prácticas/Práctica 6: Trabajo Final Planificación (La Biblioteca)/: ACTIONS.md  CMakeLists.txt  README.md  package.xml
Prácticas/Práctica 6: Trabajo Final Planificación (La Biblioteca)/behavior_trees_xml/: guide_visitor.xml  move.xml  move_object.xml  search_book.xml  shut_up.xml  solve.xml
Prácticas/Práctica 6: Trabajo Final Planificación (La Biblioteca)/config/: params.yaml
Prácticas/Práctica 6: Trabajo Final Planificación (La Biblioteca)/include/trabajo_plansys2_envidio33/: Action.hpp  DoCube.hpp  Drop.hpp  Leave.hpp  Move.hpp  Pick.hpp  PickUp.hpp  SayShhh.hpp  Search.hpp  StandDown.hpp  StandUp.hpp
Prácticas/Práctica 6: Trabajo Final Planificación (La Biblioteca)/launch/: commands  trabajo_plansys2_envidio33.launch.py
Prácticas/Práctica 6: Trabajo Final Planificación (La Biblioteca)/pddl/: robot_domain.pddl  robot_domain_aspdiojfpo.pddl  robot_problem.pddl
Prácticas/Práctica 6: Trabajo Final Planificación (La Biblioteca)/plugin/: README.md
Prácticas/Práctica 6: Trabajo Final Planificación (La Biblioteca)/plugin/plansys2_optic_plan_solver/: CMakeLists.txt  package.xml
Prácticas/Práctica 6: Trabajo Final Planificación (La Biblioteca)/plugin/plansys2_optic_plan_solver/include/plansys2_optic_plan_solver/: optic_plan_solver.hpp
Prácticas/Práctica 6: Trabajo Final Planificación (La Biblioteca)/plugin/plansys2_optic_plan_solver/src/plansys2_optic_plan_solver/: optic_plan_solver.cpp
Prácticas/Práctica 6: Trabajo Final Planificación (La Biblioteca)/src/: nav2_sim_node.cpp  trabajo_plansys2_envidio33_controller_node.cpp
Prácticas/Práctica 6: Trabajo Final Planificación (La Biblioteca)/src/behavior_tree_nodes/: Action.cpp  DoCube.cpp  Drop.cpp  Leave.cpp  Move.cpp  Pick.cpp  PickUp.cpp  SayShhh.cpp  Search.cpp  StandDown.cpp  StandUp.cpp
